added HTML Layout and Bulma styles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,53 @@
     <h1 class="title">
         Weather Dashboard
     </h1>
+    <div class="columns">
+        <div class="column is-one-third">
+            <h1>Search for a City:</h1>
+            <div class="field has-addons">
+                <div class="control">
+                    <input class="input" type="text" placeholder="search for a city">
+                </div>
+                <div class="control">
+                    <a class="button is-info">
+                        Search
+                    </a>
+                </div>
+            </div>
+            <div class="searchHistory">
+                <p>search History Goes Here</p>
+            </div>
+        </div>
+        <div class="column">
+            <section class="section">
+                <div class="container">
+                    <h1 class="title">City & Date</h1>
+                    <h2 class="subtitle">
+                        A simple container to divide your page into <strong>sections</strong>, like the one you're
+                        currently reading
+                    </h2>
+                </div>
+            </section>
+            <div class="row">
+                <div class="columns is-multiline is-mobile">
+                    <div class="column is-one-fifth">
+                        First column
+                    </div>
+                    <div class="column is-one-fifth">
+                        First column
+                    </div>
+                    <div class="column is-one-fifth">
+                        First column
+                    </div>
+                    <div class="column is-one-fifth">
+                        First column
+                    </div>
+                    <div class="column is-one-fifth">
+                        First column
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
     </section>
