consoled response for name, humidity, wind, & temp

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div class="container">
                     <h1 class="title" id="currentCity">Current City</h1>
                     <h2 class="subtitle">
-                        <p>Temperature:<span class="current" id="temperature"></span></p>
-                        <p>Humidity:<span class="current" id="humidity"></span></p>
-                        <p>Wind Speed:<span class="current" id="windSpeed"></span></p>
-                        <p>UV index:<span class="current" id="uvIndex"></span></p>
+                        <p><span class="current" id="temperature"></span></p>
+                        <p><span class="current" id="humidity"></span></p>
+                        <p><span class="current" id="windSpeed"></span></p>
+                        <p><span class="current" id="uvIndex"></span></p>
                     </h2>
                 </div>
             </section>
