--- a/index.html
+++ b/index.html
@@ -49,27 +49,9 @@
             <div id="forecast">
                 <h1>5-Day Forecast:</h1>
             </div>
-            <div class="row">
-                <div class="columns is-multiline is-mobile">
-                    <div class="column is-one-fifth">
-                        First column
-                    </div>
-                    <div class="column is-one-fifth">
-                        First column
-                    </div>
-                    <div class="column is-one-fifth">
-                        First column
-                    </div>
-                    <div class="column is-one-fifth">
-                        First column
-                    </div>
-                    <div class="column is-one-fifth">
-                        First column
-                    </div>
-                </div>
+                <div id="card-row">..</div>
             </div>
         </div>
-
     </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
