added styled to title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- title of HTML -->
-    <h1 class="title">
+    <h1 class="title" id="weatherDashboard">
         Weather Dashboard
     </h1>
     <div class="columns">
