added styling to search history section of HTML

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         Weather Dashboard
     </h1>
     <div class="columns">
-        <div class="column is-one-third">
-            <h1>Search for a City:</h1>
+        <div class="column is-one-third" id="leftColumn">
+            <!-- search input -->
+            <h1 id="citySearch">Search for a City:</h1>
             <div class="field has-addons">
                 <div class="control">
-                    <input class="input" type="text" placeholder="search for a city">
+                    <input class="input" type="text" placeholder="">
                 </div>
                 <div class="control">
                     <!-- search button -->
