added styling to 5 day forecast and current weather

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
         </div>
         <div class="column">
-            <section class="section">
+            <section class="section" id="currentWeatherDisplay">
                 <div class="container">
                     <!-- Current searched city is displayed here -->
-                    <h1 class="title" id="currentCity">Current City</h1>
+                    <h1 class="title" id="currentCity">weather</h1>
                     <!-- current city weather data displayed here -->
                     <p><span class="current" id="temperature"></span></p>
                     <p><span class="current" id="humidity"></span></p>
@@ -48,9 +48,9 @@
             </section>
             <!-- five day forecast displayed here -->
             <div id="forecast">
-                <h1>5-Day Forecast:</h1>
+                <h1 id="forecastTitle">5-Day Forecast:</h1>
             </div>
-                <div id="card-row">..</div>
+                <div id="card-row"></div>
             </div>
         </div>
     </div>
