edited weather cards. Calculated celcius to fahrenheit in weather cards

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <section class="section" id="currentWeatherDisplay">
                 <div class="container">
                     <!-- Current searched city is displayed here -->
-                    <h1 class="title" id="currentCity">weather</h1>
+                    <h1 class="title" id="currentCity">Current Weather</h1>
                     <!-- current city weather data displayed here -->
                     <p><span class="current" id="temperature"></span></p>
                     <p><span class="current" id="humidity"></span></p>
